--- a/Lesson_1/HW_01/HW_01.html
+++ b/Lesson_1/HW_01/HW_01.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=H, initial-scale=1.0">
-    <title>Document</title>
+    <title>HW_01</title>
 </head>
+
 <body>
     <h1>
         <strong>Alex Alimow</strong>
@@ -12,25 +14,32 @@
     <p><strong>возраст:</strong> 37</p>
     <p><strong>место жительства:</strong> Trier</p>
     <p><strong>email:</strong> exemple@gmail.com</p>
-    <h2><strong>Обо мне</strong>  
+    <h2><strong>Обо мне</strong>
     </h2>
-    <p>Я давно увлекаюсь компьютерами и всем что с этим связанно , любые электронные девайсы , игровые приставки - это все моя тема )
+    <p>Я давно увлекаюсь компьютерами и всем что с этим связанно , любые электронные девайсы , игровые приставки - это
+        все моя тема )
         в настоящий момент я прохожу обучение в школе <a href="https://www.ait-tr.de/" target="_blank"> ait-tr </a>
-    по специальности <a href="https://www.ait-tr.de/qa-automation-engineer " target="_blank">QA Automation Engineer </a>, вот ссылка на мой <a href="https://github.com/AlexAlimow" target="_blank">github. </a>  
-    Только вчера мы начали изучать Frontend, вот наш  <a href="../../Lesson_1/index.html" target="_blank"> первый пример</a>
-</p>
+        по специальности <a href="https://www.ait-tr.de/qa-automation-engineer " target="_blank">QA Automation Engineer
+        </a>, вот ссылка на мой <a href="https://github.com/AlexAlimow" target="_blank">github. </a>
+        Только вчера мы начали изучать Frontend, вот наш <a href="../../Lesson_1/index.html" target="_blank"> первый
+            пример</a>
+    </p>
     <h2>
         <strong>Профессиональный опыт</strong>
     </h2>
-    <p>У  меня есть небольшой опыт в программировании, я изучал язык программирования Swift, но к сожалению мне не удалось до конца освоить его
-        так как щкола в которой я изучал язык была не очень благонадежной + Apple закрыла возможность использовать dev account и оплачивать подписку в РФ.  </p>
-    
+    <p>У меня есть небольшой опыт в программировании, я изучал язык программирования Swift, но к сожалению мне не
+        удалось до конца освоить его
+        так как щкола в которой я изучал язык была не очень благонадежной + Apple закрыла возможность использовать dev
+        account и оплачивать подписку в РФ. </p>
+
     <h2>
         <strong>Хобби</strong>
     </h2>
     <p>
         Я люблю путешествовать, кататься на велосипеде, заниматься спортом, а также увлекаюсь играми и технологиями.
-        В свободное время мы с семьей занимаемся спортом, играем в настольные игры и в игровые приставки. И иногда с сыном мы смотрим вместе аниме )
+        В свободное время мы с семьей занимаемся спортом, играем в настольные игры и в игровые приставки. И иногда с
+        сыном мы смотрим вместе аниме )
     </p>
-    </body>
+</body>
+
 </html>
