--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         ссылка на домашнее задание <a href="Lesson_3/HW_02/index.html" target="_blank"> вот тут </a>
     </p>
 
+    <h2>
+        Третье домашнее задание
+    </h2>
+    <p>
+        ссылка на домашнее задание <a href="Lesson_4/HW_03/index.html" target="_blank"> вот тут </a>
+    </p>
+
 
 
 </body>
