--- a/index.html
+++ b/index.html
@@ -22,25 +22,22 @@
     <p> ссылка на второй урок <a href="Lesson_2/index.html" target="_blank"> вот тут </a> </p>
 
     <h2>
-        Первое домашнее задание
-    </h2>
+        Первое домашнее задание </h2>
     <p>
-        ссылка на домашнее задание <a href="Lesson_1/HW_01/HW_01.html" target="_blank"> вот тут </a> 
-    </p>
+        ссылка на домашнее задание <a href="Lesson_1/HW_01/HW_01.html" target="_blank"> вот тут </a> </p>
 
     <h2>
-        Второе домашнее задание
-    </h2>
+        Второе домашнее задание </h2>
     <p>
-        ссылка на домашнее задание <a href="Lesson_3/HW_02/index.html" target="_blank"> вот тут </a>
-    </p>
+        ссылка на домашнее задание <a href="Lesson_3/HW_02/index.html" target="_blank"> вот тут </a></p>
 
     <h2>
-        Третье домашнее задание
-    </h2>
+        Третье домашнее задание</h2>
     <p>
-        ссылка на домашнее задание <a href="Lesson_4/HW_03/index.html" target="_blank"> вот тут </a>
-    </p>
+        ссылка на домашнее задание <a href="Lesson_4/HW_03/index.html" target="_blank"> вот тут </a> </p>
+
+    <h2> Четвертое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_5/HW_04/index.html" target="_blank"> вот тут </a></p>
 
 
 
