--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <h2> Четвертое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_5/HW_04/index.html" target="_blank"> вот тут </a></p>
 
+    <h2> Пятое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_6/HW6/index.html" target="_blank"> вот тут </a></p>
+
 
 
 </body>
