--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <h2> Пятое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_6/HW6/index.html" target="_blank"> вот тут </a></p>
 
+    <h2> Седьмое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_7/HW_7/index.html" target="_blank"> вот тут </a></p>
+
 
 
 </body>
