--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
     <h2> Седьмое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_7/HW_7/index.html" target="_blank"> вот тут </a></p>
+    
+    <h2> Восьмое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_8/HW_8/index.html" target="_blank"> вот тут </a></p>
 
 
 
