--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     <h2> Восьмое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_8/HW_8/index.html" target="_blank"> вот тут </a></p>
 
+    <h2> Девятое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_10/CW_01/index.html" target="_blank"> вот тут </a></p>
+
+    <h2> Десятое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_10/HW_10/index.html" target="_blank"> вот тут </a></p>
+
+
 
 
 </body>
