--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <h2> Седьмое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_7/HW_7/index.html" target="_blank"> вот тут </a></p>
-    
+
     <h2> Восьмое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_8/HW_8/index.html" target="_blank"> вот тут </a></p>
 
@@ -53,6 +53,9 @@
 
     <h2> Десятое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_10/HW_10/index.html" target="_blank"> вот тут </a></p>
+
+    <h2> Одинадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_11/HW_11/index.html"_blank"> вот тут </a></p>
 
 
 
