--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>ссылка на домашнее задание <a href="Lesson_10/HW_10/index.html" target="_blank"> вот тут </a></p>
 
     <h2> Одинадцатое домашнее задание</h2>
-    <p>ссылка на домашнее задание <a href="Lesson_11/HW_11/index.html" target="_blank> вот тут </a></p>
+    <p>ссылка на домашнее задание <a href="Lesson_11/HW_11/index.html" target="_blank"> вот тут </a></p>
 
 
 
