--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <h2> Одинадцатое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_11/HW_11/index.html" target="_blank"> вот тут </a></p>
 
-
+    <h2> Двенадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_12/HW_12/index.html" target="_blank"> вот тут </a></p>
 
 
 </body>
