--- a/Lesson_12/HW_12/index.html
+++ b/Lesson_12/HW_12/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
 </nav>
 
     <div class="container py-4">
-        <h1 class="text-center mb-4">Адаптивная страница</h1>
+        <h1 class="text-center mb-4 bg-dark text-white">Адаптивная страница</h1>
 
         <div class="row g-4">
             <div class="col-12 col-md-6 col-lg-3">
