card-title  text upd (center)

--- a/Lesson_12/HW_12/index.html
+++ b/Lesson_12/HW_12/index.html
@@ -51,7 +51,7 @@
                     <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740&q=80"
                         class="card-img-top" alt="Фото 1">
                     <div class="card-body">
-                        <h5 class="card-title">Колонка 1</h5>
+                        <h5 class="card-title text-center">Колонка 1</h5>
                         <p class="card-text">Здесь находится текст первой колонки.</p>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                 <div class="card h-100 shadow-sm">
                     <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740&q=80" class="card-img-top" alt="Фото 2">
                     <div class="card-body">
-                        <h5 class="card-title">Колонка 2</h5>
+                        <h5 class="card-title text-center">Колонка 2</h5>
                         <p class="card-text">Текст второй колонки с примером Bootstrap-карточки.</p>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="card h-100 shadow-sm">
                     <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740&q=80" class="card-img-top" alt="Фото 3">
                     <div class="card-body">
-                        <h5 class="card-title">Колонка 3</h5>
+                        <h5 class="card-title text-center">Колонка 3</h5>
                         <p class="card-text">Описание третьей колонки. Все адаптивно.</p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="card h-100 shadow-sm">
                     <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740&q=80" class="card-img-top" alt="Фото 4">
                     <div class="card-body">
-                        <h5 class="card-title">Колонка 4</h5>
+                        <h5 class="card-title text-center">Колонка 4</h5>
                         <p class="card-text">Четвертая колонка. При маленьком экране будет на всю ширину.</p>
                     </div>
                 </div>
