--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     <h2> Двенадцатое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_12/HW_12/index.html" target="_blank"> вот тут </a></p>
 
+    <h2> Тринадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_13/HW_13/index.html" target="_blank"> вот тут </a></p>
+
+
 
 </body>
 
