--- a/Lesson_16/HW_16/index.html
+++ b/Lesson_16/HW_16/index.html
@@ -1,29 +1,40 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
-  <meta charset="utf-8">
-  <title>Раскрывающийся текст на всю страницу</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Раскрывающийся текст на всю страницу</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div class="page">
-    <div class="text">
-      <h1>Заголовок</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis amet, numquam dicta, exercitationem deleniti sit sequi, optio similique dolor sunt quaerat animi qui ducimus quisquam? Aspernatur necessitatibus repellendus ipsa ab?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus enim natus quos. Velit cupiditate eum consequatur! Ab voluptate repellat minus voluptatum dicta ducimus doloremque, inventore assumenda corporis atque, sequi magni.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A impedit et reprehenderit aut. Maxime, adipisci. Inventore odit esse fugit quo, ullam veniam, quos doloremque deserunt quam quasi ex architecto laboriosam?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam expedita molestias, explicabo dignissimos minus eius libero laboriosam excepturi ab, rem aut hic? Tempora ullam aliquid blanditiis minus ut, consequuntur quas.
-      </p>
+    <div class="page">
+        <div class="text">
+            <h1>Заголовок</h1>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis amet, numquam dicta, exercitationem
+                deleniti sit sequi, optio similique dolor sunt quaerat animi qui ducimus quisquam? Aspernatur
+                necessitatibus repellendus ipsa ab?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus enim natus quos. Velit cupiditate
+                eum consequatur! Ab voluptate repellat minus voluptatum dicta ducimus doloremque, inventore assumenda
+                corporis atque, sequi magni.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A impedit et reprehenderit aut. Maxime,
+                adipisci. Inventore odit esse fugit quo, ullam veniam, quos doloremque deserunt quam quasi ex architecto
+                laboriosam?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam expedita molestias, explicabo dignissimos
+                minus eius libero laboriosam excepturi ab, rem aut hic? Tempora ullam aliquid blanditiis minus ut,
+                consequuntur quas.
+            </p>
+        </div>
+        <div id="curtain" class="curtain"></div>
     </div>
-    <div id="curtain" class="curtain"></div>
-  </div>
-  <script src="script/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
+
 </html>
