--- a/Lesson_17/cw_1/index.html
+++ b/Lesson_17/cw_1/index.html
@@ -32,9 +32,9 @@
                 consequuntur quas.
             </p>
         </div>
-        <div id="curtain" class="curtain"></div>
+        <div id="block" class="block"></div>
     </div>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
