--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     <h2>Семнадцатое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_17/HW_17/index.html" target="_blank"> вот тут </a></p>
 
+    <h2>Восемнадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_18/HW_18/index.html" target="_blank"> вот тут </a></p>
+
 
 
 
