--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
     <p>ссылка на домашнее задание <a href="Lesson_18/HW_18/index.html" target="_blank"> вот тут </a></p>
 
 
+    <h2>Девятнадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_19/HW_19/index.html" target="_blank"> вот тут </a></p>
+
 
 
 </body>
