--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
     <h2>Девятнадцатое домашнее задание</h2>
     <p>ссылка на домашнее задание <a href="Lesson_19/HW_19/index.html" target="_blank"> вот тут </a></p>
 
+     <h2>Двадцатое домашнее задание</h2>
+    <p>ссылка на домашнее задание <a href="Lesson_20/HW_20/index.html" target="_blank"> вот тут </a></p>
+
 
 
 </body>
